Add new files and refactor code structure for PDF utilities
- Added `.gitignore` to exclude `node_modules`.
- Removed `index.js` and `index.ts`, consolidating exports in a new structure.
- Updated `package.json` and `jsr.json` with new version and export paths.
- Moved `index.ts` to `src/index.ts` and modularized PDF-related utility functions.
- Created new TypeScript files in `src/types` and `src/utils` for managing PDF document elements, contexts, and utility functions.
- Introduced `BlockContext` and `PageContext` classes to handle block and page contexts for PDF generation.
- Implemented utility functions for adding text, lists, and lines to PDF documents using `jsPDF`.
- Adjusted PDF element positioning and cursor management logic.

--- a/package.json
+++ b/package.json
@@ -1,3 +1,9 @@
 {
-  "type": "module"
+  "name": "@javixcode/jspdf-utils",
+  "version": "1.0.0",
+  "description": "Utilities for JSPDF",
+  "type": "module",
+  "peerDependencies": {
+    "jspdf": "^2.5.1"
+  }
 }
