Update dependencies and refactor imports in pdfUtils.ts
- Changed `peerDependencies` to `dependencies` for `jspdf` in `package.json`.
- Modified imports in `pdfUtils.ts` to use `type` for improved TypeScript type import handling.
- Binary file `bun.lockb` updated.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Utilities for JSPDF",
   "type": "module",
-  "peerDependencies": {
+  "dependencies": {
     "jspdf": "^2.5.1"
   }
 }
