Update version and restructure module exports
- Bumped version from `1.0.0` to `1.0.1` in `jsr.json` and `package.json`.
- Changed `dependencies` to `peerDependencies` in `package.json` for `jspdf`.
- Updated exports in `index.ts` to include individual utilities like `addList`, `addText`, and `addLine`.
- Refactored `elementUtils.ts` to export default utility functions for better module handling.

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@javixcode/jspdf-utils",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Utilities for JSPDF",
   "type": "module",
-  "dependencies": {
+  "peerDependencies": {
     "jspdf": "^2.5.1"
   }
 }
