Add vitest tests and update package scripts
- Add `vitest` as a dependency in `package.json`
- Introduce a `test` script to run `vitest`
- Create new test files for various components:
  - `blockContext.spec.ts`
  - `elementUtils.spec.ts`
  - `line.spec.ts`
  - `list.spec.ts`
  - `text.spec.ts`
  - `calcPositions.spec.ts`
  - `document.spec.ts`
  - `element.spec.ts`
  - `page.spec.ts`
  - `text.spec.ts`
- Tests cover block context, element utils, line positioning, list handling, and PDF-related utilities.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,13 @@
   "version": "1.0.1",
   "description": "Utilities for JSPDF",
   "type": "module",
+  "scripts": {
+    "test": "vitest"
+  },
   "peerDependencies": {
     "jspdf": "^2.5.1"
+  },
+  "dependencies": {
+    "vitest": "^2.1.1"
   }
 }
